--- a/twitter/hafEnd2.html
+++ b/twitter/hafEnd2.html
@@ -6,7 +6,7 @@
   <link href="style.css" rel="stylesheet" />
 </head>
 <body>
-<a class="twitter-timeline" href="https://twitter.com/christophrumpel?ref_src=twsrc%5Etfw">Tweets by christophrumpel</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<a class="twitter-timeline" href="https://twitter.com/DianaWebdev?ref_src=twsrc%5Etfw">Tweets by DianaWebdev</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   <script>
   </script>
 </body>
